--- a/code/waterside/waterside_core/CMakeLists.txt
+++ b/code/waterside/waterside_core/CMakeLists.txt
@@ -1,8 +1,9 @@
-﻿project(waterside_core)
-
-find_package(TBB REQUIRED)
+﻿find_package(TBB REQUIRED)
+find_package(Boost REQUIRED)
+find_package(flatbuffers REQUIRED)
 
 include_directories(
+	${Boost_INCLUDE_DIRS}
 	.
 	logger
 	signal
@@ -10,10 +11,12 @@ include_directories(
 	object
 	time
 	network
+	frame
 	)
 
-file(GLOB_RECURSE ALL_FILES *.cpp)
+file(GLOB_RECURSE ALL_FILES *.h *.cpp)
+source_group_by_dir(ALL_FILES)
 
 add_library(waterside_core STATIC ${ALL_FILES})
 
-target_link_libraries(waterside_core TBB::tbb TBB::tbbmalloc TBB::tbbmalloc_proxy)
+target_link_libraries(waterside_core flatbuffers::flatbuffers TBB::tbb TBB::tbbmalloc TBB::tbbmalloc_proxy)
