服务器和数据库

--- a/code/waterside/CMakeLists.txt
+++ b/code/waterside/CMakeLists.txt
@@ -54,8 +54,10 @@ project ("waterside")
 add_subdirectory ("waterside_core")
 add_subdirectory ("waterside_route")
 add_subdirectory ("waterside_mysql")
+add_subdirectory ("stmtc")
 add_subdirectory ("NameRegServer")
 add_subdirectory ("LoginServer")
 add_subdirectory ("GameServer")
+add_subdirectory ("GateServer")
 add_subdirectory ("test_server")
 add_subdirectory ("test_client")
